on main page clicking between VJ demos and event production has the correct spacing

--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ font-weight: lighter;
     font-size: 2.5rem;
     color: #777;
     padding-top: var(--margin_top);
+    margin-top: 10vh;
+   
 }
 
 
